--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,16 @@ html, body {
   height: 100vh;
 }
 
- #playingField{
+#playingField{
   background: #080705;
+}
+
+#finishScreen{
+  background: #fff;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  display: none;
+  z-index: 999;
 }
